external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_match_tuple.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04005]: expected a single type
  ┌─ tests/move_2024/matching/invalid_match_tuple.move:6:16
  │
3 │     fun x(): (u64, u64) { (0, 42) }
  │              ---------- Expected a single type, but found expression list type: '(u64, u64)'
  ·
6 │         match (x()) {
  │                ^^^ Invalid 'match' subject

error[E03019]: invalid pattern
  ┌─ tests/move_2024/matching/invalid_match_tuple.move:7:13
  │
7 │             (x, y) => ()
  │             ^^^^^^ Tuple patterns are not allowed in match arms. Tuple destructuring is only valid in 'let' bindings

error[E04005]: expected a single type
   ┌─ tests/move_2024/matching/invalid_match_tuple.move:12:16
   │
 3 │     fun x(): (u64, u64) { (0, 42) }
   │              ---------- Expected a single type, but found expression list type: '(u64, u64)'
   ·
12 │         match (x()) {
   │                ^^^ Invalid 'match' subject
